# django-uwsgi-taskmanager

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pyproject.toml.000  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pushed.yml  released.yml  test.yml
demo/: manage.py  uwsgi.ini
demo/demo/: __init__.py  settings.py  urls.py
docs/: Makefile  conf.py  discussions.rst  getstarted.rst  index.rst  reference.rst
docs/howtos/: dev_add_to_dockerized.rst  dev_add_to_existing.rst  dev_contribute.rst  dev_debug.rst  dev_notifications.rst  howtos.rst  users_admin_gui.rst
taskmanager/: __init__.py  admin.py  apps.py  compat.py  logging.py  logging_utils.py  models.py  notifications.py  settings.py  tasks.py  urls.py  utils.py  uwsgidecorators_wrapper.py  views.py
taskmanager/locale/it/LC_MESSAGES/: django.po
taskmanager/management/: __init__.py  base.py
taskmanager/management/commands/: __init__.py  collect_commands.py  restart_despooled_tasks.py  test_command.py  test_livelogging_command.py  test_logging_command.py
taskmanager/migrations/: 0001_initial.py  0002_auto_20201001_1751.py
taskmanager/static/js/: menu_filter_collapse.js
taskmanager/templates/: live_log_viewer.html  log_viewer.html
taskmanager/templates/admin/: appcommand_changeform.html  custom_changeform.html
taskmanager/templates/admin/edit_inline/: tabular_reports.html
tests/: __init__.py  test_commands.py  test_models.py  test_task_manager.py  test_utils.py
