[bumpversion]
current_version = 2.2.10
commit = True
tag = True

[bumpversion:file:taskmanager/__init__.py]
serialize = ({major}, {minor}, {patch})
parse = \((?P<major>\d+),\s(?P<minor>\d+),\s(?P<patch>\d+)\)

[coverage:run]
branch = True
omit = 
	.tox/*
	*/__init__.py
	*/migrations/*
	*/tests/*
	*/wsgi.py
	manage.py
	setup.py
source = .

[mypy]
files = taskmanager
ignore_missing_imports = true

[mypy-*.migrations.*]
ignore_errors = True

[flake8]
exclude = 
	__pycache__,
	.eggs,
	.git,
	.tox,
	*/migrations/*,
	*/venv/*,
ignore = E203,E266,E501,W503
max-line-length = 80
select = B,C,D,E,F,I,W,T4,B9

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = taskmanager
known_third_party = django, file_read_backwards
line_length = 88
multi_line_output = 3
not_skip = __init__.py
use_parentheses = True
skip = venv,migrations

[metadata]
license-file = LICENSE.md
